Issue 92: Replacing incompatible jvm options
Signed-off-by: SrishT <Srishti.Thakkar@dell.com>